日志优化
