# internal/order/ports/openapi_types.gen.go
@@ -1,4 +1,4 @@
- // Package ports provides primitives to interact with the openapi HTTP API.
+// Package ports provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package ports
@@ -35,6 +35,14 @@ type Order struct {
 	Items       []Item `json:"items"`
 	PaymentLink string `json:"payment_link"`
 	Status      string `json:"status"`
+}
+
+// Response defines model for Response.
+type Response struct {
+	Data    map[string]interface{} `json:"data"`
+	Errno   int                    `json:"errno"`
+	Message string                 `json:"message"`
+	TraceId string                 `json:"trace_id"`
 }
 
 // PostCustomerCustomerIdOrderJSONRequestBody defines body for PostCustomerCustomerIdOrder for application/json ContentType.
